# lastfm-rs

./: .gitattributes  .gitignore  Cargo.toml  Makefile  README.md  build.rs  config.toml.example  ios-roadmap.md  openapi.yaml  wrangler.toml
.github/workflows/: ci.yml  deploy-pages.yml  release.yml
docs/: CLI_SHOWCASE.md  CLI_USER_MANUAL.md  FAVICON_README.md  README.md  TESTING_SUMMARY.md  generate-favicon.sh  index.html  styles.css
scripts/: install-cli.sh  preview-landing-page.sh  test_all_commands.sh  test_summary.sh  test_worker.sh
src/: error.rs  lib.rs  middleware.rs  models.rs  swagger-ui.html  utils.rs
src/cli/: error.rs  mod.rs  traits.rs
src/cli/api/: client.rs  endpoints.rs  mod.rs
src/cli/auth/: mod.rs
src/cli/commands/: album.rs  artist.rs  auth.rs  cache.rs  chart.rs  config.rs  geo.rs  library.rs  mod.rs  my.rs  tag.rs  tests.rs  track.rs  user.rs  worker.rs
src/cli/config/: mod.rs  tests.rs
src/cli/error/: tests.rs
src/cli/output/: mod.rs  tests.rs
src/common/: mod.rs  signing.rs  url.rs  validation.rs
src/handlers/: album.rs  artist.rs  auth.rs  chart.rs  geo.rs  library.rs  mod.rs  tag.rs  track.rs  user.rs
tests/: integration_tests.rs  unit_tests.rs
