[package]
name = "lastfm-proxy-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "lastfm-cli"
path = "src/bin/lastfm-cli.rs"

[dependencies]
worker = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
futures = "0.3"
console_error_panic_hook = "0.1"
md5 = "0.7"

# CLI-only dependencies (not for WASM)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
colored = "2.1"
prettytable-rs = "0.10"
indicatif = "0.17"
dialoguer = "0.11"
dirs = "5.0"
toml = "0.8"
thiserror = "1.0"
csv = "1.3"
open = "5.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1